--- a/Site/style.css
+++ b/Site/style.css
@@ -48,25 +48,35 @@ table {
 }
 
 /*Code CSS Custom*/
+
+
+body{
+	font-family: 'kindergarten',cursive;
+	background-image: url(./media/fond.jpg);
+	
+}
 body>nav{
 	width: 80%;
 	max-width: 1200px;
 	background-color: #FFF;
 	margin: auto;
+
 }
 
 header, footer{
 	color: black;
-	background-image: url(./media/Image\ obligatoire.webp);
 }
 
 footer{
 	margin-top: 30px;
+	
 }
 
 main{
-	background-color: #FFF;
+	background-color: #FDFADD;
 	color: #000;
+	width: 60%;
+	margin: auto
 }
 
 header>div, main>div, footer>div{
@@ -84,7 +94,6 @@ nav{
 	border-bottom: solid 2px rgb(0, 0, 0);
 	width: calc(100% - 400px);
 	text-align: right;
-	font-family: kindergarten;
 }
 
 nav>ul>li{
@@ -93,10 +102,16 @@ nav>ul>li{
 	width: 200px;
 	height: 70px;
 	line-height: 70px;
-	font-size: 20px;
+	font-size: 25px;
+	font-weight: bold;
 }
 
 main>div{
 	padding-top: 30px;
 	text-align: justify;
+}
+
+div p{
+	text-align: center;
+	font-size: 40px;
 }
