j'espere ca fonctionne

--- a/Site/style.css
+++ b/Site/style.css
@@ -172,7 +172,6 @@ h2{
 
 #evenementEtCarte{
 	display: flex;
-	justify-content:space-between;
 }
 
 .sousItems{
@@ -190,12 +189,17 @@ h2{
 	justify-content:space-between;
 
 }
+#carte{
+	width: 200%;
+	height: 100%;
+	padding-left: 10px;
+}
 
 iframe{
 	border: solid 4px orange;
 	border-radius: 15px;
-	width: 600px;
-	height: 500px;
+	width: 100%;
+	height: 100%;
 }
 
 
